--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
+    "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
     "spectacle": "^4.0.0",
+    "spectacle-theme-nova": "^1.4.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
