--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "end-to-end-testing",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
@@ -48,7 +48,9 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "spec": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "deploy": "git subtree push --prefix build origin gh-pages",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
